--- a/.gitignore
+++ b/.gitignore
@@ -89,5 +89,6 @@ gensim/models/fasttext_inner.c
 gensim/models/nmf_pgd.c
 gensim/models/word2vec_corpusfile.cpp
 gensim/models/word2vec_inner.c
+gensim/models/asm2vec_inner.c
 
 .ipynb_checkpoints
